*Empty MediaWiki Message*

--- a/Кудо_(спорт).mw
+++ b/Кудо_(спорт).mw
@@ -1,33 +1,33 @@
 {{Вес ыҥ-влак|Кудо (ыҥ-влак)}}
 '''Кудо''' — [[спорт-сар кучедалмаш]] тӱрлык, тиде мут [[япон йылме]] гыч лектын. Тыш [[карате]], [[бокс]], тыглай кучедалмаш ушнат. Кудо манме спорт-сар кучедалмашлан японысо каратист Адзума Такаси тӱҥалтышым пуен. 
 
-Таҥасымашын правилыж почеш тыглай кучедалмашын чыла прием дене пайдаланаш лиеш. Тыгеак тавалышын капыштыже кеч могай верышкыже кырен кертыда, тольык тупым да шоягоремым тӱкаш огеш лий. [[Спортсмен]]-влакын вуйышт, эн ончыч [[чурий]]ышт [[шлем]] дене аралалтеш.
+Таҥасымашын правилыж почеш тыглай кучедалмашын чыла приём дене пайдаланаш лиеш. Тыгеак тавалышын капыштыже керек могай верышкыже кырен кертыда, тупым да шоягоремым веле тӱкаш огеш лий. [[Спортсмен]]-влакын вуйышт, эн ончыч [[чурий]]ышт [[ӧшлӧк]] дене аралалтеш.
 
 == Эртымгорно ==
-[[Японий]]ыште кучедалмаш-влак шке корныштым Акрет годсо жап гыч тӱҥалыт. Но тыште вес паша. Шукерте огыл, а чынжым, [[1981]] ийыште Японийыште карате ик эн торжа толкынжо шочын. Тӱҥалтышыште тудо «дайдо дзюку каратэ-до» лӱмдалтын. [[Марий йылме|Марий йылмышке]] кусараш гын, «карате-до школ гыч Кугу Корныш» семын кусаралтеш. Кучедалмашын тиде толкыным чоҥышо Адзума Такаси философ шинчымашым поген, сандене у кучедалмашын лӱмышкыжо тошто китайысе калык мутым пуртен: «Кугу Корныш лекташылан омса уке. Кажне айдеме эн ончыч тиде омсам шке шӱмыштыжӧ чоҥышаш, вара гына шке корно дене Йӧршеш Сайыш (Совершенство) шуышаш». [[1991]] ийыште Адзума Такаси таҥасымашыш российысе спортсменым Юрий Пироговым пуртен, тыге [[Россий]]ланат, да уло тӱнялан кучедалмашын шке толкынжым почын.
+[[Японий]]ыште кучедалмаш-влак шке корныштым Акрет годсо жап гыч тӱҥалыт. Но тыште вес паша. Шукерте огыл, а чынжым, [[1981]] ийыште Японийыште карате ик эн торжа толкынжо шочын. Тӱҥалтышыште тудо «дайдо дзюку каратэ-до» лӱмдалтын. [[Марий йылме|Марий йылмышке]] кусараш гын, «карате-до школ гыч Кугу Корныш» семын кусаралтеш. Кучедалмашын тиде толкыным чоҥышо Адзума Такаси философ шинчымашым поген, сандене у кучедалмашын лӱмышкыжӧ тошто китайысе калык мутым пуртен: «Кугу Корныш лектышылан омса уке. Кажне айдеме эн ончыч тиде омсам шке шӱмыштыжӧ чоҥышаш, вара гына шке корно дене Йӧршеш Сайыш (Совершенство) шуышаш». [[1991]] ийыште Адзума Такаси таҥасымашыш российысе спортсменым Юрий Пироговым пуртен, тыге [[Россий]]ланат, да уло тӱнялан кучедалмашын шке толкынжым почын.
 
-[[2001]] ийыште толкын шке [[лӱм]]жым налеш – «кудо». Ты гана Адзума тиде лӱмышкӧ адакат шке шонымашыжым пурта: «ку» иероглиф – «пуста» семын кусаралтеш, японысо «до» мут «корным» ончыкта. Мыланна тудым умылаш неле, но японийысе кучедалмаш-влакыште «Пуста корно» у тӱҥалтышым ончыкта.
+[[2001]] ийыште толкын шке [[лӱм]]жым налеш – «кудо». Ты гана Адзума тиде лӱмышкӧ адакат шке шонымашыжым пурта: «ку» иероглиф – «яра» семын кусаралтеш, японысо «до» мут «корным» ончыкта. Мыланна тудым умылаш неле, но японийысе кучедалмаш-влакыште «Яра корно» у тӱҥалтышым ончыкта.
 
-Молан «дайдо дзюку каратэ-до» гыч «кудо» лийын? Калыккокласе Кудо Федерацийлан Олимпиадыш пураш жап толын шуын. Тидлан «каратэ-до» толкын-влак деч ойыртемалтман ыле. Кудо – карате огыл. Тышке бокс, [[кикбоксинг]], [[самбо]], [[дзюдо]], [[туэквондо]], [[кекусинкай]]-карате ушненыт. Кажне кӱрашымаш гыч эн виян, торжа да пайдале приемым Адзума Такаси ойырен, сандене журналист-влак тиде толкыным утыждене торжа толкын лӱмденыт. «Кудо» толкынышто те [[йол]]денат, [[кид]]денат кырен кертыда. Тавалышын капыштыже кеч могай верыш логалын кертыда, но тольык логарым, шоягоремым, тупым тарваташ огеш лий. Тыгеак сустав-шамычым тугымаш чарыме. Аралалташлан спортсмен вуйшко шлемым чия. Тиде вуйчием чурийым пластик гыч ыштыме петыртыш дене арала. 
+Молан «дайдо дзюку каратэ-до» гыч «кудо» лийын? Калыкгокласе Кудо Федерацийлан Олимпиадыш пураш жап толын шуын. Тидлан «каратэ-до» толкын-влак деч ойыртемалтман ыле. Кудо – карате огыл. Тышке бокс, [[кикбоксинг]], [[самбо]], [[дзюдо]], [[туэквондо]], [[кекусинкай]]-карате ушненыт. Кажне кӱрашымаш гыч эн виян, торжа да пайдале приёмым Адзума Такаси ойырен, сандене журналист-влак тиде толкыным утыждене торжа толкын лӱмденыт. «Кудо» толкынышто те [[йол]]денат, [[кид]]денат кырен кертыда. Тавалышын капыштыже кеч могай верыш логалын кертыда, такшым логарым, шоягоремым, тупым тарваташ огеш лий. Тыгеак {{comment|йыжыҥ|сустав}}-шамычым тугымаш чарыме. Аралалташлан спортсмен вуйшко ӧшлӧкым чия. Тиде вуйчием чурийым пластик гыч ыштыме петыртыш дене арала. 
 
 Мутат уке, кеч могай, японысо кучедалмаш – тиде [[философий]]. Адзума Такаси шке философийжым чоҥен. Каласаш кӱлеш, тиде айдемын туныктышыжо Масутацу Ояма кекусинкай-карате школым чоҥен, а тиде кумдан палыме кучедалмаш. 
 
 «Кеч мо лийже гынат, нигунам ит сеҥалт. Могай шонымаш дене пытартыш кучедалмашышке лектыт – тыгай шонымаш дене тый кажне кучедалмашышке лекшаш улат», - тыгай мут дене Ояма сеҥымашлан туныктен. 
 
-«Рвезе шочын кертеш, но пӧръеҥ лияшлан тиде шагал, кугу пашам ыштыман. Тыште эн тӱҥ – сеҥымашке шуымаш огыл. Тӱҥжӧ - ыштыме паша».
+«Рвезе шочын кертеш, туге гынат пӧръеҥ лияшлан тиде шагал, кугу пашам ыштыман. Тыште эн тӱҥ – сеҥымашке шуымаш огыл. Тӱҥжӧ - ыштыме паша».
 
 Чынак, кудо – неле тунеммаш, кудыжым кажне эртен ок керт. Но тыште те йолташым муын кертыда, а йолташ эре полшаш ямде.
 
-== Россйыште ==
-[[1994]] ийыште [[Сӱрем]] тылзын шымше кечынже [[Моско]] олаште «Москосо «Дайдо-джуку каратэ-то» федераций регистрацийым эртен. Президент пашам Роман Анашкин шукташ тӱҥалын. Тиде ийынак Россий кӱкшытысӧ калыккокласе Таҥасымаш эртен. Адзума Такаси пагалыме уна семын ончаш толын. Российысе спортсмен-влакын эн тӱҥ тавалышыже японысо команде лийын. Нунын кокла гыч нигӧ сеҥен огыл. 
+== Российыште ==
+[[1994]] ийыште [[Сӱрем]] тылзын шымше кечынже [[Моско]] олаште «Москосо «Дайдо-джуку каратэ-то» федераций регистрацийым эртен. Президент пашам Роман Анашкин шукташ тӱҥалын. Тиде ийынак Россий кӱкшытысӧ калыкгокласе Таҥасымаш эртен. Адзума Такаси пагалыме уна семын ончаш толын. Российысе спортсмен-влакын эн тӱҥ тавалышыже японысо команде лийын. Нунын кокла гыч нигӧ сеҥен огыл. 
 
-Вес ийын кокымшо Таҥасымаш эрта. Кучедалмашын Федерацийже кушкеш, вияҥеш, у мастар-влак лектыт, мемнан спортсмен-влак Японийыш таҥасаш кудалыштыт. 1996 ийыште Россий кӱкшытысӧ Кумшо калыккокласе Таҥасымаш эрта. Тиддеч вара российысе спортсмен-влак японийысе кугу таҥасымашыш каеныт. Япон кучедалше-влак мемнан кучедалше-влакын мастарлыкланже ӧрыныт. Россий гыч толшо кок спортсмен шке категорийыштышт икымше да кокымшо верым айленыт. 
+Вес ийын кокымшо Таҥасымаш эрта. Кучедалмашын Федерацийже кушкеш, вияҥеш, у мастар-влак лектыт, мемнан спортсмен-влак Японийыш таҥасаш кудалыштыт. 1996 ийыште Россий кӱкшытысӧ Кумшо калыкгокласе Таҥасымаш эрта. Тиддеч вара российысе спортсмен-влак японийысе кугу таҥасымашыш каеныт. Япон кучедалше-влак мемнан кучедалше-влакын мастарлыкланже ӧрыныт. Россий гыч толшо кок спортсмен шке категорийыштышт икымше да кокымшо верым айленыт. 
 
 [[2004]] ийыште Россий Федерацийыште «Российысе Кудо Федераций» регистрацийым эрта. 
 
-[[2005]] ий. Тӱнямбалсе чемпионат. Команды дене Российысе спортсмен-влак икымше верым налыт. 
+[[2005]] ий. Тӱнямбалсе чемпионат. Команде дене Российысе спортсмен-влак икымше верым налыт. 
 
-Кудо кучедалмаш гыч прием-влакым ужнеда гын, «Чек», «Я кукла», «Антикиллер», «Полковник», «Удар лотоса» фильмылаште кӱрашымашым эскерен кертыда.
+Кудо кучедалмаш гыч приём-влакым ужнеда гын, «Чек», «Я кукла», «Антикиллер», «Полковник», «Удар лотоса» фильмылаште кӱрашымашым эскерен кертыда.
 
 [[Категорий:Спорт]]
 [[Категорий:Спорт тӱрлык-влак]]
