*Empty MediaWiki Message*

--- a/Ӧшлӧк.mw
+++ b/Ӧшлӧк.mw
@@ -2,9 +2,9 @@
 
 * Ӧшлӧк (ӱзгар) — кече еда кучылтмо ӧшлӧк-влак:
 ** [[Хоккей ӧшлӧк]] — шайбан хоккей модышышто кучылтмо ӧшлӧк,
-** [[Мотоцыкыл ӧшлӧк]] — мотоцыкыл кудалымаш годым кучылтмо ӧшлӧк,
+** [[Мотоцыкл ӧшлӧк]] — мотоцыкыл кудалымаш годым кучылтмо ӧшлӧк,
 ** [[Велосипед ӧшлӧк]] — велосипед кудалымаш годым кучылтмо ӧшлӧк,
 ** [[Курыкъече ӧшлӧк]].
-* [[Каска]] — кызытсе сарзын ӧшлӧкшӧ.
+* [[Каске]] — кызытсе сарзын ӧшлӧкшӧ.
 * [[Ӧшлӧк (кӱртньӧ вургем)|Ӧшлӧк]] — тошто курым деч покшел курым марте кучылтмо сарзе ӧшлӧк.
 * [[Геральдик ӧшлӧк]].
