--- a/Ӧшлӧк.mw
+++ b/Ӧшлӧк.mw
@@ -8,3 +8,7 @@
 * [[Каске]] — кызытсе сарзын ӧшлӧкшӧ.
 * [[Ӧшлӧк (кӱртньӧ вургем)|Ӧшлӧк]] — тошто курым деч покшел курым марте кучылтмо сарзе ӧшлӧк.
 * [[Геральдик ӧшлӧк]].
+
+{{Шуко ончыктымаш-влак}}
+
+[[ru:Шлем]]
