*Empty MediaWiki Message*

--- a/Тагалог_йылме.mw
+++ b/Тагалог_йылме.mw
@@ -1,6 +1,7 @@
-'''Тагалог йылме''' {{lang-ru|''тага́льский язык''}}, ('''Тагалог'''; Tagalog [təˈga:log]) — Филиппин Республикын тӱҥ йылме-влак радам гыч йылме. Кутырышо-влакын чотышт Филиппиныште эн кугу. 
+'''Тагалог йылме''' ({{lang-ru|''тага́льский язык''}}), ('''Тагалог'''; Tagalog [təˈga:log]) — Филиппин Республикын тӱҥ йылме-влак радам гыч йылме. Кутырышо-влакын чотышт Филиппиныште эн кугу. 
 
 [[Категорий:Тагалог йылме|*]]
+
 
 [[ar:لغة تغلوغية]]
 [[ast:Tagalu]]
