*Empty MediaWiki Message*

--- a/Тасман_теҥыз.mw
+++ b/Тасман_теҥыз.mw
@@ -7,8 +7,8 @@
  |lon_dir = E|lon_deg =160 |lon_min = 31|lon_sec =30 
  |region                  = 
  |CoordScale              = 10000000
- |Верланымаш            = 
-  |Кужыт                  = 
+ |Верланымаш            = Австралий - У Зеландий
+  |Кужыт                  = 2000
   |Лопкыт                 = 
   |Кумдык                = 
  |Объём                   = 
