*Empty MediaWiki Message*

--- a/Фиджи_теҥыз.mw
+++ b/Фиджи_теҥыз.mw
@@ -1,6 +1,6 @@
 {{Теҥыз
  |Лӱм                = {{PAGENAME}}
- |Сӱрет             = Файл:Море Фиджи.JPG
+ |Сӱрет             = Море Фиджи.JPG
   |Сӱрет лопкыт     = 250px
   |Возымаш                = Филиппинын картыже. Сулу теҥыз шолаште ӱлнӧ.
  |lat_dir = S|lat_deg = 26|lat_min =49 |lat_sec =27 
