--- a/Каҥашымаш:Тӱҥ_лаштык.mw
+++ b/Каҥашымаш:Тӱҥ_лаштык.mw
@@ -41,4 +41,5 @@ Dear friends, may I ask you to add a hyperlink to our Tatar Wikipedia (http://tt
 Уважаемые коллеги, скоро к работе в Википедии подключится Марийский государственный университет. Студенты в плане выполнения курсовых и дипломных работ будут публиковать свои материалы. Преподаватели тоже будут участвовать в наполнении проекта. Прошу вас отнестись к ним лояльно, помогать по мере сил. И к приходу сюда университета, думаю, что стоило бы заняться оформлением Порталов. У нас сейчас вместо них перенаправления на страницы. Предлагаю бросить все наши усилия и мастерство на оформление и создание полноценных порталов по всем имеющимся направлениям, как в Рувики. Чем больше будет красных ссылок, тем лучше. Обращаюсь в первую очередь к опытным участникам. --[[Пайдаланыше:Санюн Вадик|Санюн Вадик]] 05:52, 16 Пеледыш 2011 (UTC)
 :Судьба порталов напрямую зависит от пожеланий и возможностей энтузиастов, которые в теме портала разбираются. Будут таковые — будут и порталы. Оформление заимствуем из [[:ru:]], напр. [[:ru:Портал:Генетика]] --[[Пайдаланыше:Denis Sacharnych|Denis Sacharnych]] 06:08, 16 Пеледыш 2011 (UTC)
 :: А можно сделать так, чтобы фотографии там автоматически обновлялись, к примеру, синхронно с РуВики?--[[Пайдаланыше:Санюн Вадик|Санюн Вадик]] 06:36, 16 Пеледыш 2011 (UTC)
+:::Не знаю, увы. Спроси тут: [[:en:Wikipedia:Where_to_ask_a_question]] --[[Пайдаланыше:Denis Sacharnych|Denis Sacharnych]] 12:51, 17 Пеледыш 2011 (UTC)
 :Ну если хочешь, можешь заняться созданием портала, например, про спорт. Тебе никто не мешает. С оформлением, или с шаблонами косяки какие если будут - то я возможно помогу. И лично мое мнение, лучше за основу брать порталы из англ.-вики. Все-равно в рувики копируют из англвики. Англвики как первоисточник получается.--[[Пайдаланыше:ПешСай|ПешСай]] 08:30, 16 Пеледыш 2011 (UTC)
