*Empty MediaWiki Message*

--- a/Марий_Тӱрек.mw
+++ b/Марий_Тӱрек.mw
@@ -38,10 +38,18 @@
  |сайт                     = 
 }}
 
-'''Марий Тӱрек''' ({{lang-ru|Мари-Турек}}) — [[Марий Тӱрек кундем]]ын рӱдыжӧ.
+'''Марий Тӱрек''' ({{lang-ru|Мари-Турек}}) — [[Марий Тӱрек кундем]]ын рӱдыжӧ. Ола сынан кугыяллан шотлалтеш. Йошкар-Ола деч 125 меҥге тораште шога. Лӱмжӧ «тӱр» мут деч шочын. Тиде илем эҥер тӱрыштӧ гына огыл, марий мланде тӱрыштӧ верланен. Но лӱм шочмо шотышто эше икмыняр легенде уло:
+# Илем Туречка эҥерын лӱмжым налын. Но марий-влак тиде эҥерым тӱрлын лӱмдат: Шолеҥер корем, Эҥервал корем, Тӱрек корем.
+# Акрет жапыште тиде верыште Тур лӱман марий [[лужавуй]]ым тойымо.
+# Тиде илемым эше марий-влак деч ончыч илыше калык лӱмден.
+Но тиде илем марий илымверлан шотлалтеш. Уло эше Руш Тӱрек. Тудо Виче эҥерыште верленен. Тушто ондак марий-влак иленыт.
 
 == Эртымгорно ==
-
+Икымше гана официалле кагазыште Марий Тӱрек нерген 1699 ийыште возымо. Тиде ийым кызыт Марий Тӱрекым негызлыме ийлан шотлалтеш. Но калык тыште 100 ий тиддеч ончычат илен, южо тошто официалле кагаз-влак мемнан марте аралалт кодын огытыл. 
+=== Тошто Тӱрек ===
+XVI курымын кокымшо пелыштыже марий-влак эрык верч кучедалаш тӱҥалыныт. Руш войска нуным шалатеныт да верысе калыкым эскерашлан форпост-ола-влакым чоҥеныт. Марий-влаклан апшат пашам шукташ, олалаште илаш чареныт. Кугу эҥер серла гыч нуным вес верыш илаш колтеныт. Виче эҥер гычат марий-влаклан каяш логалын. Тӱрекыште илыше марий-влак тушеч касвелыш каеныт да у ялым чоҥеныт. У илемым тошто лӱм дене лӱмденыт, тыге Марий Тӱрек шочын. Виче эҥерыш марий-влак деч вара толшо [[руш]]-влак илемын лӱмыштыжӧ «ӱ» йӱкпалым «у» фонеме дене алмаштеныт. Тыге Русский Турек илем шочын.
+=== У Тӱрек ===
+Тӱҥалтышыште у ял эҥерын шола велыштыже верланен, таче тушто эмлымвер-влак шогат. Негызым, очыни, Ози лӱман марий пыштен. 1930-шо ийлаштат верысе калык тиде верым Ози курык лӱмден. Но тыште моткоч кугу чер шарлен. Эпидемий деч аралалташлан нуно чыла пӧрт-влакым йӱлалтеныт да эҥерын пурла серышкыже илаш кусненыт. 1699 ийысе кагазыште 23 еҥын лӱмыштым возымо. Нуно еш кугыза-влак лийыныт, йӧзакым тӱленыт. Тугеже гын, тиде жаплан тиде верыште 23 еш илен. 
 == Лӱмлӧ еҥ-влак ==
 * 
 
