*Empty MediaWiki Message*

--- a/Марий_Тӱрек.mw
+++ b/Марий_Тӱрек.mw
@@ -17,7 +17,7 @@
  |кундем четлыкыште          = Марий Тӱрек кундем{{!}}Марий Тӱрек
  |кӧргӧ шеледымаш       = 
  |вуйлатыше                    =
- |негызлыме           = 1719
+ |негызлыме           = 1699
  |икымше гана палемдымаш        = 
  |тошто лӱм-влак            = 
  |статусым налме                 = 1975
@@ -32,7 +32,7 @@
   |этнохороним             = 
  |почто индекс          = 425500
  |почто индекс-влак         = 
- |телефон код           = 836??
+ |телефон код           = 83634
  |цыпр идентификатор   = 88 224 551
  |категорий Commonsышто      = 
  |сайт                     = 
