--- a/Марий_Тӱрек.mw
+++ b/Марий_Тӱрек.mw
@@ -44,12 +44,21 @@
 # Тиде илемым эше марий-влак деч ончыч илыше калык лӱмден.
 Но тиде илем марий илымверлан шотлалтеш. Уло эше Руш Тӱрек. Тудо Виче эҥерыште верленен. Тушто ондак марий-влак иленыт.
 
+
+XVIII курым тӱҥалтыш марте верысе калык чимарий йӱлам кучен. 1716-1717 ийласе возымаш (перепись) почеш тыште илыше еҥ-влакын ик руш але танле лӱмат лийын огыл. Чылан марий лӱм-влакым нумалыныт. Христиан миссионер-влакын пашашт лектышым конден огыл. Санде
+
 == Эртымгорно ==
 Икымше гана официалле кагазыште Марий Тӱрек нерген 1699 ийыште возымо. Тиде ийым кызыт Марий Тӱрекым негызлыме ийлан шотлалтеш. Но калык тыште 100 ий тиддеч ончычат илен, южо тошто официалле кагаз-влак мемнан марте аралалт кодын огытыл. 
 === Тошто Тӱрек ===
 XVI курымын кокымшо пелыштыже марий-влак эрык верч кучедалаш тӱҥалыныт. Руш войска нуным шалатеныт да верысе калыкым эскерашлан форпост-ола-влакым чоҥеныт. Марий-влаклан апшат пашам шукташ, олалаште илаш чареныт. Кугу эҥер серла гыч нуным вес верыш илаш колтеныт. Виче эҥер гычат марий-влаклан каяш логалын. Тӱрекыште илыше марий-влак тушеч касвелыш каеныт да у ялым чоҥеныт. У илемым тошто лӱм дене лӱмденыт, тыге Марий Тӱрек шочын. Виче эҥерыш марий-влак деч вара толшо [[руш]]-влак илемын лӱмыштыжӧ «ӱ» йӱкпалым «у» фонеме дене алмаштеныт. Тыге Русский Турек илем шочын.
 === У Тӱрек ===
 Тӱҥалтышыште у ял эҥерын шола велыштыже верланен, таче тушто эмлымвер-влак шогат. Негызым, очыни, Ози лӱман марий пыштен. 1930-шо ийлаштат верысе калык тиде верым Ози курык лӱмден. Но тыште моткоч кугу чер шарлен. Эпидемий деч аралалташлан нуно чыла пӧрт-влакым йӱлалтеныт да эҥерын пурла серышкыже илаш кусненыт. 1699 ийысе кагазыште 23 еҥын лӱмыштым возымо. Нуно еш кугыза-влак лийыныт, йӧзакым тӱленыт. Тугеже гын, тиде жаплан тиде верыште 23 еш илен. 
+1780-ше ий марте Тӱрек илем Озаҥ губернийын Уржум уездышкыж пурен. Вара, Вятский наместничеством, чоҥымо дене Уржум уезд тушко куснен. 
+
+XVIII курым тӱҥалтыш марте верысе калык чимарий йӱлам кучен. 1716-1717 ийласе возымаш (перепись) почеш тыште илыше еҥ-влакын ик руш але танле лӱмат лийын огыл. Чылан марий лӱм-влакым нумалыныт. Христиан миссионер-влакын пашашт лектышым конден огыл. Сандене 1766 ийыште тыште пу черкым шогалтеныт. Тӱрек села сыным налын. 1766 ийлан волостьышто 403 тынеш пурышо, 77 ыреслалтдыме марий да 56 [[суас]] - [[мусульман]] илен. Тынеш пуреныт гынат Ош Кугу Юмылан кумалыныт.
+=== Селашке савырнымаш ===
+1838 ийыште ты верыште Казанско-Богородицкий черкым шогалтеныт. Кунам илем села сыным налын, тушко руш-влакат илаш толаш тӱҥалыныт. Ончыч [[юмызо]]-влакын ешышт, волость вуйлатыше-влак, вара амалкалче-влак. Нуно черке деке лишкырак шке пӧртыштым шогалташ тыршеныт,  тыге марий ял воктене руш урем шочын. Поп урем лӱмым налын, вес мучашыжым Кабак урем маныныт. Таче тудым Комсомольский лӱмдат.
+Марий да руш урем-влак Лапке урем дене ушалтыныт. Тудын мучашыжым Корак урем маныныт. Вара тудо Советский урем лийын. 
 == Лӱмлӧ еҥ-влак ==
 * 
 
