--- a/Чита.mw
+++ b/Чита.mw
@@ -55,7 +55,7 @@
 Чита — кӱлешан экономик, транспорт да тӱвыра рӱдыжӧ.
 
 == Эртымгорно ==
-[[Файл:Главный корпус ТГУ.jpg|thumb|left|250px|Томск кугыжаныш университет]]
+[[Файл:Amurskaya street Chita.jpg|thumb|left|250px|Древновскийын пӧртжӧ да Второвын Пассажже]]
 
 {{мланде}}
 
