*Empty MediaWiki Message*

--- a/Чита.mw
+++ b/Чита.mw
@@ -14,7 +14,7 @@
  |ЯндексКарта              = http://maps.yandex.ru/map.xml?mapID=2100&mapX=12632526&mapY=6774036&scale=9&slices=1&descx=12632526&descy=6774036
  |регион картын кугытшо     =
  |кундем картын кугытшо      = 
- |регион                                  = мланде
+ |регион                                  = Шеҥгел Байкал мланде
  |регион четлыкыште         =
  |кундем тӱрлык                   = Оласе йырвел
  |кундем                                 = Чита{{!}}Чита ола
@@ -50,14 +50,14 @@
  |add1                     = 
 }}
 
-'''Чита''' ({{Lang-ru|Чита}}) - ола [[Россий|Российыште]], [[мланде|мландын]] кучем рӱдыжӧ.
+'''Чита''' ({{Lang-ru|Чита}}) - ола [[Россий|Российыште]], [[Шеҥгел Байкал мланде|Шеҥгел Байкал мландын]] кучем рӱдыжӧ.
 
 Чита — кӱлешан экономик, транспорт да тӱвыра рӱдыжӧ.
 
 == Эртымгорно ==
-[[Файл:Amurskaya street Chita.jpg|thumb|left|250px|Древновскийын пӧртжӧ да Второвын Пассажже]]
+[[Файл:Amurskaya street Chita.jpg|thumb|left|250px|Древновскийын пӧртшӧ да Второвын Пассажже]]
 
-{{мланде}}
+{{Шеҥгел Байкал мланде}}
 
 [[Категорий:Чита]]
 
