/* {{comment|Кылшот|Структур}} */

--- a/Сивыр_федерал_йырвел.mw
+++ b/Сивыр_федерал_йырвел.mw
@@ -32,7 +32,7 @@
 |-
 ! 2
 | [[Файл:Altai Kraj bandera.gif|50px|border]]
-| [[Алтай край]]
+| [[Алтай мланде]]
 | [[Барнаул]]
 |-
 ! 3
@@ -42,7 +42,7 @@
 |-
 ! 4
 | [[Файл:Flag of Zabaykalsky Krai.svg|50px|border]]
-| [[Забайкальский край]]
+| [[Шеҥгел Байкал мланде]]
 | [[Чита]]
 |-
 ! 5
@@ -57,7 +57,7 @@
 |-
 ! 7
 | [[Файл:KrasnoyarskKray-Flag.svg|50px|border]]
-| [[Красноярск край]]
+| [[Красноярск мланде]]
 | [[Красноярск]]
 |-
 ! 8
@@ -85,7 +85,6 @@
 | [[Хакасий|Хакасий Республик]]
 | [[Абакан]]
 |}
-
 
 == Калыкчот ==
 2002 ийлан Сибирь федерал йырвелыште 20 062 938 еҥ ила, Россий калыкчот деч тиде 13,82 %. Калык-влак:
