*Empty MediaWiki Message*

--- a/Краснодар.mw
+++ b/Краснодар.mw
@@ -42,7 +42,7 @@
  |сайт                                  = http://www.krd.ru/
 }}
 
-[[Файл:KubKaz.JPG|thumb|200 px|Кубань казачестволан шарныктыш Краснодарыште]]
+[[Файл:Krasnodar obelisk.jpg|thumb|200 px|Кубань казачестволан шарныктыш Краснодарыште]]
 '''Краснодар''' (''Йошкар пӧлек'') — ола [[Россий]]ыште, [[Краснодар мланде|Краснодар мландын]] рӱдыжӧ. Калыкчот 713,4 тӱж. еҥ наре.
 
 == Тыгеак ончо ==
