--- a/Марий_Эл.mw
+++ b/Марий_Эл.mw
@@ -92,49 +92,49 @@ summerTime = [[WUTC|UTC]] + 4
 <div align="center">
 {| class="toccolours" style="margin: 0 2em 0 2em"
 |-
-| bgcolor="#C0C0C0" | '''5 тӱжем деч шукырак еҥан илемла''' ([[1 Теле]] [[2007]])
+| bgcolor="#C0C0C0" | '''5 тӱжем деч шукырак еҥан илемла''' ([[1 Шорыкйол]] [[2010]])
 |-
 |
 <table width="600" border="0" cellspacing="1" cellpadding="0">
  <tr align="left">
   <td width="35%" style="font-family:Verdana, Arial;font-size:10px;font-weight:bold;"> [[Йошкар-Ола]]</td>
-  <td width="15%" style="font-family:Verdana, Arial;font-size:10px;">249,8</td>
+  <td width="15%" style="font-family:Verdana, Arial;font-size:10px;">260,3</td>
   <td width="35%" style="font-family:Verdana, Arial;font-size:10px;"> [[Семонсола]]</td>
-  <td width="15%" style="font-family:Verdana, Arial;font-size:10px;">7,0 (2003)</td>
+  <td width="15%" style="font-family:Verdana, Arial;font-size:10px;">7,5 (2008)</td>
  </tr>
  <tr align="left">
   <td style="font-family:Verdana, Arial;font-size:10px;font-weight:bold;"> [[Юлсер-Ола]]</td>
-  <td style="font-family:Verdana, Arial;font-size:10px;">57,4</td>
+  <td style="font-family:Verdana, Arial;font-size:10px;">56,2</td>
   <td style="font-family:Verdana, Arial;font-size:10px;"> [[Лушмара]]</td>
-  <td style="font-family:Verdana, Arial;font-size:10px;">6,9</td>
+  <td style="font-family:Verdana, Arial;font-size:10px;">6,8</td>
  </tr>
  <tr align="left">
   <td style="font-family:Verdana, Arial;font-size:10px;font-weight:bold;"> [[Чыкма]]</td>
-  <td style="font-family:Verdana, Arial;font-size:10px;">22,6</td>
+  <td style="font-family:Verdana, Arial;font-size:10px;">22,7</td>
   <td style="font-family:Verdana, Arial;font-size:10px;"> [[Ӧрша]]</td>
-  <td style="font-family:Verdana, Arial;font-size:10px;">6,9</td>
+  <td style="font-family:Verdana, Arial;font-size:10px;">6,7</td>
  </tr>
  <tr align="left">
   <td style="font-family:Verdana, Arial;font-size:10px;"> [[Маскасола]]</td>
-  <td style="font-family:Verdana, Arial;font-size:10px;">16,6</td>
+  <td style="font-family:Verdana, Arial;font-size:10px;">16,7</td>
   <td style="font-family:Verdana, Arial;font-size:10px;"> [[У Торъял]]</td>
-  <td style="font-family:Verdana, Arial;font-size:10px;">6,7</td>
+  <td style="font-family:Verdana, Arial;font-size:10px;">6,5</td>
  </tr>
  <tr align="left">
   <td style="font-family:Verdana, Arial;font-size:10px;font-weight:bold;"> [[Провой]]</td>
-  <td style="font-family:Verdana, Arial;font-size:10px;">12,3</td>
+  <td style="font-family:Verdana, Arial;font-size:10px;">12,0</td>
   <td style="font-family:Verdana, Arial;font-size:10px;"> [[Поранча]]</td>
-  <td style="font-family:Verdana, Arial;font-size:10px;">6,7</td>
+  <td style="font-family:Verdana, Arial;font-size:10px;">6,6</td>
  </tr>
  <tr align="left">
   <td style="font-family:Verdana, Arial;font-size:10px;"> [[У Роҥго]]</td>
-  <td style="font-family:Verdana, Arial;font-size:10px;">10,5</td>
+  <td style="font-family:Verdana, Arial;font-size:10px;">10,3</td>
   <td style="font-family:Verdana, Arial;font-size:10px;"> [[Марий Тӱрек]]</td>
-  <td style="font-family:Verdana, Arial;font-size:10px;">6,0</td>
+  <td style="font-family:Verdana, Arial;font-size:10px;">5,9</td>
  </tr>
  <tr align="left">
   <td style="font-family:Verdana, Arial;font-size:10px;"> [[Морко]]</td>
-  <td style="font-family:Verdana, Arial;font-size:10px;">9,9</td>
+  <td style="font-family:Verdana, Arial;font-size:10px;">10,1</td>
   <td style="font-family:Verdana, Arial;font-size:10px;"> [[Кужэҥер]]</td>
   <td style="font-family:Verdana, Arial;font-size:10px;">5,8</td>
  </tr>
