*Empty MediaWiki Message*

--- a/Маскасола.mw
+++ b/Маскасола.mw
@@ -23,7 +23,7 @@
  |статусым налме                 = 1973
  |кумдык                  = 1,78
  |ИВ рӱдын кӱкшытшӧ         = 115
-  |калыкчот               = {{Шагалеммаш}} 16 670
+  |калыкчот               = {{Шукеммаш}} 16 670
   |еҥшотлымаш ий            = 2010
   |чаклык               = 
   |агломераций             = 
