--- a/Масканур.mw
+++ b/Масканур.mw
@@ -1,6 +1,6 @@
 '''Масканур''' мут ончыктен кертеш:
 
-* Масканур — [[Маскасола]] [[ола сынан кугуял]]ын вес лӱмжӧ.
+* Масканур — [[Маскасола]] [[ола сынан кугыял]]ын вес лӱмжӧ.
 * [[Масканур (У Торъял кундем)]] — ял [[У Торъял кундем|У Торъял кундемыште]].
 
 {{Шуко ончыктымаш-влак}}
