*Empty MediaWiki Message*

--- a/Масканур.mw
+++ b/Масканур.mw
@@ -1,6 +1,6 @@
 '''Масканур''' мут ончыктен кертеш:
 
 * Масканур — [[Маскасола]] [[ола сынан кугыял]]ын вес лӱмжӧ.
-* [[Масканур (У Торъял кундем)]] — ял [[У Торъял кундем|У Торъял кундемыште]].
+* [[Масканур (У Торъял кундем)|Масканур]] — ял [[У Торъял кундем|У Торъял кундемыште]].
 
 {{Шуко ончыктымаш-влак}}
