*Empty MediaWiki Message*

--- a/У_Торъял.mw
+++ b/У_Торъял.mw
@@ -1,3 +1,43 @@
+{{ИВ-Россий
+ |статус                   = Ола сынан кугыял
+ |марий лӱм     = У Торъял
+ |руш лӱм         = Новый Торъял
+ |ойып                     = 
+ |тисте                     = 
+  |lat_deg =56 |lat_min =59 |lat_sec =
+  |lon_deg =48 |lon_min =43 |lon_sec = 
+  |CoordAddon = type:city(6542)_region:RU
+  |CoordScale = 20000
+ |ЯндексКарта              = 
+ |регион                   = Марий Эл
+ |регион четлыкыште         = Марий Эл
+ |регион картын кугытшо     = 200
+ |кундем тӱрлык               = 
+ |кундем                    = У Торъял кундем
+ |кундем четлыкыште          = У Торъял кундем{{!}}У Торъял
+ |кӧргӧ шеледымаш       = 
+ |вуйлатыше                    = 
+ |негызлыме           = 1815
+ |икымше гана палемдымаш        = 
+ |тошто лӱм-влак            = 
+ |статусым налме                 = 1972
+ |кумдык                  = 
+ |ИВ рӱдын кӱкшытшӧ         = 
+  |калыкчот               = {{Шагалеммаш}} 6542
+  |еҥшотлымаш ий            = 2010
+  |чаклык               = 
+  |агломераций             = 
+  |калык-влак     = 
+  |инаныше-влак = 
+  |этнохороним             = 
+ |почто индекс          = 425430
+ |почто индекс-влак         = 
+ |телефон код           = 836??
+ |цыпр идентификатор   = 88 236 551
+ |категорий Commonsышто      = http://toryal.ru/ У Торъял кундемын официал сайтже
+ |сайт                     = 
+}}
+
 '''У Торъял''' ({{lang-ru|Новый Торъял}}) кугыял — [[У Торъял кундем]]ын рӱдыжӧ улеш. [[Марий Эл]] республикын кечывалвел — эрвелыште верланен. [[Йошкар-Ола]] марте 80 [[меҥге]].
 [[Файл:Shukshan pond.JPG|thumb|left|200px|Шукшан эҥер У Торъялыште]]
 
