*Empty MediaWiki Message*

--- a/Масканур_(У_Торъял_кундем,_сола).mw
+++ b/Масканур_(У_Торъял_кундем,_сола).mw
@@ -1,4 +1,44 @@
 {{Вес ыҥ-влак|Масканур (ыҥ-влак)}}
+{{ИВ-Россий
+ |статус                   = Ял
+ |марий лӱм     = Масканур
+ |руш лӱм         = 
+ |ойып                     = 
+ |тисте                     = 
+  |lat_deg =56 |lat_min =59 |lat_sec =
+  |lon_deg =48 |lon_min =43 |lon_sec = 
+  |CoordAddon = type:city(441)_region:RU
+  |CoordScale = 20000
+ |ЯндексКарта              = 
+ |регион                   = Марий Эл
+ |регион четлыкыште         = Марий Эл
+ |регион картын кугытшо     = 200
+ |кундем тӱрлык               = 
+ |кундем                    = У Торъял кундем
+ |кундем четлыкыште          = У Торъял кундем{{!}}У Торъял
+ |кӧргӧ шеледымаш       = 
+ |вуйлатыше                    = 
+ |негызлыме           = 
+ |икымше гана палемдымаш        = 1845
+ |тошто лӱм-влак            = 
+ |статусым налме                 = 
+ |кумдык                  = 
+ |ИВ рӱдын кӱкшытшӧ         = 
+  |калыкчот               = {{Шагалеммаш}} 441
+  |еҥшотлымаш ий            = 1999
+  |чаклык               = 
+  |агломераций             = 
+  |калык-влак     = 
+  |инаныше-влак = 
+  |этнохороним             = 
+ |почто индекс          = 425430
+ |почто индекс-влак         = 
+ |телефон код           = 836??
+ |цыпр идентификатор   = 
+ |категорий Commonsышто      = 
+ |сайт                     = 
+}}
+
 '''Масканур села'''
 
 == Географий верланымаш ==
