*Empty MediaWiki Message*

--- a/Кугу_Лумарий_(У_Торъял_кундем).mw
+++ b/Кугу_Лумарий_(У_Торъял_кундем).mw
@@ -1,3 +1,43 @@
+{{ИВ-Россий
+ |статус                   = Ял
+ |марий лӱм     = Кугу Лумарий
+ |руш лӱм         = Большая Лумарь
+ |ойып                     = 
+ |тисте                     = 
+  |lat_deg =56 |lat_min =59 |lat_sec =
+  |lon_deg =48 |lon_min =43 |lon_sec = 
+  |CoordAddon = type:city(392)_region:RU
+  |CoordScale = 20000
+ |ЯндексКарта              = 
+ |регион                   = Марий Эл
+ |регион четлыкыште         = Марий Эл
+ |регион картын кугытшо     = 200
+ |кундем тӱрлык               = 
+ |кундем                    = У Торъял кундем
+ |кундем четлыкыште          = У Торъял кундем{{!}}У Торъял
+ |кӧргӧ шеледымаш       = 
+ |вуйлатыше                    = 
+ |негызлыме           = 
+ |икымше гана палемдымаш        = 1756
+ |тошто лӱм-влак            = 
+ |статусым налме                 = 
+ |кумдык                  = 
+ |ИВ рӱдын кӱкшытшӧ         = 
+  |калыкчот               = {{Шагалеммаш}} 392
+  |еҥшотлымаш ий            = 2002
+  |чаклык               = 
+  |агломераций             = 
+  |калык-влак     = 
+  |инаныше-влак = 
+  |этнохороним             = 
+ |почто индекс          = 425430
+ |почто индекс-влак         = 
+ |телефон код           = 836??
+ |цыпр идентификатор   = 
+ |категорий Commonsышто      = 
+ |сайт                     = 
+}}
+
 '''Кугу Лумарий''' ({{lang-ru|Большая Лумарь}}) — [[ял]] [[Масканур ялысе илем (Марий Эл)|Масканур ялысе илемыште]], [[У Торъял кундем]], [[Марий Эл]], [[Россий]].
 
 Калыкчот — 98 сурт-пече да 392 еҥ (2002 ий). 
