--- a/Месси,_Лионель.mw
+++ b/Месси,_Лионель.mw
@@ -141,23 +141,23 @@
 !47
 |-
 |align="center"|2010-11
+|align="center"|33
+|align="center"|31
+|align="center"|7
+|align="center"|7
+|align="center"|13
 |align="center"|12
-|align="center"|15
-|align="center"|1
-|align="center"|1
-|align="center"|5
-|align="center"|6
 |align="center"|2
 |align="center"|3
-!20
-!25
+!55
+!53
 |-
 |- style="background:lemonchiffon"
-! !! Чылажге !! 156 !! 103 !! 20 !! 11 !! 49 !! 31 !! 9 !! 7 !! 234 !! 152
+! !! Чылажге !! 177 !! 119 !! 26 !! 17 !! 57 !! 37 !! 9 !! 7 !! 269 !! 180
 |- style="background:beige"
-!colspan="2"| Чылажге модмо жапыште !! 178 !! 109 !! 20 !! 11 !! 49 !! 31 !! 9 !! 7 !! 256 !! 158
+!colspan="2"| Чылажге модмо жапыште !! 199 !! 125 !! 26 !! 17 !! 57 !! 37 !! 9 !! 7 !! 291 !! 186
 |}
-''(2010 ий Кылме тылзын 25 кечылан келшышын тӧрлымӧ)''
+''(2011 ий 20 Пеледышыште тӧрлымӧ)''
 
 
 
@@ -265,16 +265,32 @@
 |align="center"|
 |align="center"|
 |align="center"|
-|align="center"|4
+|align="center"|5
+|align="center"|2
+|align="center"|
+|align="center"|
+!10
+!2
+|-
+|align="center"|2011
+|align="center"|
+|align="center"|
+|align="center"|
+|align="center"|
+|align="center"|
+|align="center"|
+|align="center"|1
 |align="center"|1
 |align="center"|
 |align="center"|
-!9
 !1
+!1
+|-
 |- style="background:lemonchiffon"
-!colspan="2"|Чылажге !! 8 !! 1 !! 6 !! 2 !! 21 !! 4 !! 17 !! 7 !! 5 !! 2 !! 54 !! 16
+!colspan="2"|Чылажге !! 8 !! 1 !! 6 !! 2 !! 21 !! 4 !! 19 !! 9 !! 5 !! 2 !! 59 !! 18
 |}
-
+''(2011 ий 20 Пеледышыште тӧрлымӧ)''
+== Палемдымаш-влак ==
 <references/>
 
 == Тидым палаш оҥай ==
