--- a/Месси,_Лионель.mw
+++ b/Месси,_Лионель.mw
@@ -1,5 +1,5 @@
 [[Файл:Lionel Messi 31mar2007.jpg|thumb|left|200px|Месси [[31 Ӱярня]] [[2007]] ийыште]]
-'''Лионе́ль Андре́с Ме́сси''' (исп. Lionel Andrés Messi; 24 Пеледыш 1987, Росарио) — аргентинысе футболист, испанийысе "Барселона" команде да Аргентинын чумыр командын модшыжо. Чӱчкыдын тудым Марадона дене таҥастарат.
+'''Лионе́ль Андре́с Ме́сси''' ({{lang-es|Lionel Andrés Messi}} [[24 Пеледыш]] [[1987]], [[Росарио]] [[Аргентина]]) — аргентинысе футболист, испанийысе "Барселона" команде да Аргентинын чумыр командын модшыжо. Чӱчкыдын тудым Марадона дене таҥастарат.
 Изи капшылан (169 см) да талын модмыжлан йолташ-влакше тудым Шуршо манын лӱмдат.
 == Сеҥымаш-влак ==
 [[2008]] ийыште Олимпий чемпион лийын, [[2005]] ийыште самырык-влак коклаште тӱнямбал чемпион (турнирын эн сай модшо да эн сай бомбардир). "Барселонаште" ныл гана Испаний чемпион лӱмым сулен (2004/05, 2005/06,  2008/09, 2009/10). 2005 да [[2007]] ийлаште Аргентинын эн сай модшыжлан сайлалтын, Чемпион Лиге таҥасымашште кок гана сеҥен (08/09 да 09/10). 2009 ийыште Европышто идалыкын эн сай футболистшылан УЕФА ойырен. [[2009]] ийыште "Шӧртньӧ мече", а вара "Бриллиант мече" пӧлек-влакым налын. ФИФА-н ойырымыж почеш [[2009]] ийыште Месси тӱнямбалне эн сай футболист лийын. Тыгеак, 2009 ийыште [[19 Теле|Теле тылзын 19 кечынже]] Абу-Даби олаште эртыше клуб-влак кокласе Тӱнямбал чемпионатыште Месси, финал матчыште голым пуртымеке, чемпион лийын.
