*Empty MediaWiki Message*

--- a/21_шорыкйол.mw
+++ b/21_шорыкйол.mw
@@ -1,9 +1,12 @@
 {{Шорыкйол}}
 '''21 Шорыкйол''' — [[григориан кечышот]] почеш идалыкын 21-ше кечыже. Идалык пытыме марте 344 (кужемдыме ийлаште 345) кече кодеш.
 == Пайрем-влак==
-
+* [[Инженер войскан кечыже]] (шарнымаш кече).
+* [[Ӧндалалтмаш кече]]
+* Аспирант кече
 == Лӱмгече ==
-
+* Католик лӱм-влак: [[Агнес]]са, Мейнард, Фруктуоз
+* Танле лӱм-влак: Або, [[Анастасий]], [[Антоний (лӱм)|Антоний]]/[[Антон]], [[Аттик]], [[Василиса]], [[Виктор]], [[Владимир (лӱм)|Владимир]], [[Георгий]], [[Григорий]], [[Дмитрий]], [[Домна (лӱм)|Домна]], [[Евгений]], [[Емельян]]/[[Эмиль]], Зотик, [[Илья]], [[Исидор]], [[Картерий]], Келсий/Кельсий, [[Кир (лӱм)|Кир]], Марионилла, [[Михаил]], [[Паисий]], [[Феоктист]], [[Феофил]], Элладий/Елладий, [[Юлиан]]
 == Мо лийын ==
 ''Тыгак ончо: [[:Категорий:21 Шорыкйол Мо лийын]]''
 
@@ -14,7 +17,10 @@
 ''Тыгак ончо: [[:Категорий:21 Шорыкйол Кӧ колен]]''
 
 == Калык пале ==
-
+Емельянын кечыже
+* Тиде кечын кум ден кумам пукшаш, йӱкташ кӱлеш - йоча-влаклан тиде тазалыкым конда.
+* Кресава ден кресача вашмут семын шовын ден солыкым йочалан конденыт.
+* Емельянлан мардеж кечывалвелым гын кеҥеж кӱдырчан лийшаш.
 {{commonscat|21 January}}
 
 [[Категорий:21 Шорыкйол]]
