*Empty MediaWiki Message*

--- a/Каҥашымаш:Марий_Тӱрек.mw
+++ b/Каҥашымаш:Марий_Тӱрек.mw
@@ -1,2 +1,3 @@
 == Оҥай увераҥар ==
 ПешСай, тиде "Оҥай увераҥар" '''У Тӱрек''' кыдежыште ончыктымо. [[Пайдаланыше:Azimbaj|Azimbaj]] 20:16, 20 Пеледыш 2011 (UTC)
+:Йӧра, тугеже.--[[Пайдаланыше:ПешСай|ПешСай]] 07:01, 21 Пеледыш 2011 (UTC)
