--- a/Колыдымо_пеледыш.mw
+++ b/Колыдымо_пеледыш.mw
@@ -278,3 +278,5 @@
 [[pt:Helichrysum]]
 [[ro:Helichrysum]]
 [[ru:Бессмертник]]
+
+* [http://www.tokmok.kg/novosti/news-tokmok/obshhestvo/728-letnee-cvetenie-bessmertnik-.html Xeranthemum annuum] photo
