*Empty MediaWiki Message*

--- a/Категорий:Сар.mw
+++ b/Категорий:Сар.mw
@@ -62,6 +62,7 @@
 [[tk:Kategoriýa:Uruş]]
 [[tl:Kategorya:Digmaan]]
 [[tt:Төркем:Сугыш]]
+[[uk:Категорія:Війна]]
 [[ur:زمرہ:جنگ]]
 [[vls:Categorie:Oorlog]]
 [[yi:קאַטעגאָריע:מלחמות]]
