*Empty MediaWiki Message*

--- a/Кышкар:Вики-каныш%2FДокументаций.mw
+++ b/Кышкар:Вики-каныш%2FДокументаций.mw
@@ -3,19 +3,19 @@
 {{Вики-каныш|Дата}}
 <pre>{{Вики-каныш|Дата|, Post scriptum.}}</pre>
 {{Вики-каныш|Дата|, Post scriptum.}}
-<pre>{{Вики-каныш|Марла дата|, Марла Post scriptum.|Английская дата|, Английский Post scriptum.}}</pre>
-{{Вики-каныш|Марла дата|, Марла Post scriptum.|Английская дата|, Английский Post scriptum.}}
+<pre>{{Вики-каныш|Марла дата|, Марла Post scriptum.|Англичанла дата|, Англичанла Post scriptum.}}</pre>
+{{Вики-каныш|Марла дата|, Марла Post scriptum.|Англичанла дата|, Англичанла Post scriptum.}}
 <pre>
-{{Вики-отпуск
+{{Вики-каныш
  |date = Марла дата
  |ps = , Марла Post scriptum.
- |date-en = Английская дата
- |ps-en = , Английский Post scriptum.
+ |date-en = Англичанла дата
+ |ps-en = , Англичанла Post scriptum.
 }}
 </pre>
 {{Вики-каныш
  |date = Марла дата
  |ps = , Марла Post scriptum.
- |date-en = Английская дата
- |ps-en = , Английский Post scriptum.
+ |date-en = Англичанла дата
+ |ps-en = , Англичанла Post scriptum.
 }}
