--- a/Портал:Сымыктыш.mw
+++ b/Портал:Сымыктыш.mw
@@ -1,1 +1,133 @@
-#REDIRECT [[Сымыктыш]]
+__NOTOC__ __NOEDITSECTION__
+{{/Навигация}}
+<div style="position:relative; height:90px; overflow:hidden; border:1px solid #C0C0C0; padding:0; background:#55606C;height:90px">
+<div style="width:100%; overflow:hidden; padding-bottom:0.5em;">[[Файл:Art through history small.jpg|Портал:Искусство|1100px]]</div>
+</div>
+{{/Таб}}
+
+{| cellspacing="6"
+| width="75%" style="border-top:4px solid #C0C0C0; border-bottom:7px solid #C0C0C0; background-color:#fff; padding:0.5em;" valign="top"|
+<div style="font-variant:small-caps;font-family:Eurostile, 'Gill Sans', sans-serif; font-size:260%">'''Портал:Искусство'''</div>
+<div style="font-variant:small-caps;font-size:100%;margin-bottom:0.3em;">Искусство — шаг из природы в Бесконечность. (Джебран Халиль Джебран)</div>
+----
+</br>
+</div>
+'''Иску́сство''' (от ''искусы творити'') — [[процесс]] или итог выражения [[внутренний мир|внутреннего мира]] в (художественном) [[Образ (искусство)|образе]], [[творчество|творческое]] сочетание [[элемент]]ов таким способом, который отражает [[чувства]] или [[эмоции]].
+
+Долгое время искусством считался вид [[Культура|культурной]] деятельности, удовлетворяющий любовь человека к [[Прекрасное|прекрасному]].
+Вместе с эволюцией социальных эстетических норм и оценок искусством получила право называться любая деятельность, направленная на создание выразительных форм в соответствии с эстетическими идеалами.
+
+В масштабах всего общества искусство — особый способ познания и отражения действительности, одна из форм общественного сознания и часть духовной культуры как человека, так и всего человечества, многообразный результат творческой деятельности всех поколений.
+
+<!-- ######################### Fin del titular #########################-->
+| rowspan="6" width="25%" style="border: 2px solid #808080; border-bottom: 4px solid #808080; background-color:#F9F9F9; padding:0em;" valign="top" |
+{| cellspacing="0px" cellpadding="0"
+| style="border: 2px solid #C0C0C0; background-color:#F9F9F9; padding:0.5em;border-left:none;border-right:none;" valign="middle" |
+<center>{{/Заставка}}</center>
+
+<div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Дочерние порталы'''</div>
+----
+{{/Дочерние порталы}}
+<div align="right"><small>{{Editme|Портал:Искусство/Дочерние порталы|text=Править}}</small></div>
+|-
+| style="border: 2px solid #C0C0C0;border-top:none; background-color:#F9F9F9;border-left:none;border-right:none; padding:0.5em;" valign="top" |
+<div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Категории'''</div>
+----
+{{/Категории}}
+|-
+| style="border: 2px solid #C0C0C0;border-top:none; background-color:#F9F9F9;border-left:none;border-right:none; padding:0.5em;" valign="top" |
+<div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Новые статьи'''</div>
+----
+{{/Новые статьи}}
+<div align="right"><small>{{Editme|Портал:Искусство/Новые статьи|text=Править}}</small></div>
+|-
+| style="border: 2px solid #C0C0C0; border-top:none; background-color:#F9F9F9; border-left:none; border-right:none; border-bottom:none; padding:0.5em;" valign="top" |
+<div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Проекты'''</div>
+----
+{{/Проекты}}
+
+|}
+<!-- ######################### Fin columna derecha #########################-->
+|---- valign="top"
+| width="70%" style="border-bottom:4px solid #C0C0C0; background-color:#FFF;" |
+{| width="100%"
+|-
+| style="vertical-align:top; width:70%; border: 2px solid #C0C0C0; border-top:none; background-color:#F9F9F9; border-left:none; border-right:none; border-bottom:none; padding:0.5em;" valign="top"|
+<div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Избранная статья'''</div>
+----
+<div style="padding:0.0em 0.0em 0.0em 0.0em; background-color:transparent;">
+{{/Избранная статья}}
+<div align="right"><small>[[Портал:Искусство/Избранная статья/Архив|Архив]]&nbsp;&nbsp;{{Editme|Портал:Искусство/Избранная статья|text=Править}}</small></div>
+</div>
+|-
+| style="vertical-align:top; width:70%;" |
+<div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Избранное изображение'''</div>
+----
+<div style="padding:0.0em 0.0em 0.0em 0.0em; background-color:transparent;">
+{{/Избранное изображение}}
+<div align="right"><small>[[Портал:Искусство/Избранное изображение/Текущая подборка|Текущая подборка]]&nbsp;&nbsp;[[Портал:Искусство/Избранное изображение/Архив|Архив]]&nbsp;&nbsp;{{Editme|Портал:Искусство/Избранное изображение|text=Править}}</small></div>
+</div>
+|-
+| style="vertical-align:top; width:70%; border: 2px solid #C0C0C0; border-top:none; background-color:#F9F9F9; border-left:none; border-right:none; border-bottom:none; padding:0.5em;" valign="top" |
+<div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Избранная личность'''</div>
+----
+<div style="padding:0.0em 0.0em 0.0em 0.0em; background-color:transparent;">
+{{/Избранная личность}}
+<div align="right"><small>[[Портал:Искусство/Избранная личность/Архив|Архив]]&nbsp;&nbsp;{{Editme|Портал:Искусство/Избранная личность|text=Править}}</small></div>
+</div>
+|-
+| style="vertical-align:top; width:70%;" |
+<div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Как я могу помочь'''</div>
+----
+<div style="padding:0.0em 0.0em 0.0em 0.0em; background-color:transparent;">
+{{/Как я могу помочь}}
+<div align="right"><small>{{Editme|Портал:Искусство/Как я могу помочь|text=Править}}</small></div>
+</div>
+|}
+|}
+{{/Таб}}
+
+[[Категория:Портал:Искусство| ]]
+
+{{Link FL|he}}
+
+[[ru:Портал:Искусство]]
+[[bg:Портал:Изкуство]]
+[[ca:Portal:Art]]
+[[cs:Portál:Umění]]
+[[de:Portal:Kunst und Kultur]]
+[[el:Πύλη:Τέχνη]]
+[[en:Portal:Arts]]
+[[es:Portal:Arte]]
+[[et:Portaal:Kaunid kunstid]]
+[[fa:درگاه:هنر]]
+[[fr:Portail:Arts]]
+[[he:פורטל:אמנות]]
+[[hy:Պորտալ:Արվեստ]]
+[[it:Portale:Arte]]
+[[ja:Portal:美術]]
+[[jv:Gapura:Seni]]
+[[ka:პორტალი:ხელოვნება]]
+[[kab:Awwur:Taẓuri]]
+[[ko:들머리:문화예술]]
+[[lv:Portāls:Māksla]]
+[[mk:Портал:Уметност]]
+[[ms:Portal:Seni]]
+[[nds:Portal:Kunst]]
+[[nl:Portaal:Kunst & Cultuur]]
+[[no:Portal:Kunst]]
+[[oc:Portal:Arts]]
+[[pam:Portal:Kalalangan]]
+[[pl:Portal:Sztuka]]
+[[ps:تانبه:هنرونه]]
+[[pt:Portal:Arte]]
+[[ro:Portal:Artă]]
+[[sr:Портал:Уметност]]
+[[sv:Portal:Konst]]
+[[tr:Portal:Sanat]]
+[[ts:Portal:Arts]]
+[[uk:Портал:Мистецтво]]
+[[vls:Portoal:Kunst en Cultuur]]
+[[zh:Portal:艺术]]
+[[zh-classical:門:集]]
+[[zh-yue:Portal:藝術]]
