*Empty MediaWiki Message*

--- a/Портал:Сымыктыш.mw
+++ b/Портал:Сымыктыш.mw
@@ -1,24 +1,17 @@
 __NOTOC__ __NOEDITSECTION__
 {{/Навигация}}
 <div style="position:relative; height:90px; overflow:hidden; border:1px solid #C0C0C0; padding:0; background:#55606C;height:90px">
-<div style="width:100%; overflow:hidden; padding-bottom:0.5em;">[[Файл:Art through history small.jpg|Портал:Искусство|1100px]]</div>
+<div style="width:100%; overflow:hidden; padding-bottom:0.5em;">[[Файл:Art through history small.jpg|Портал:Сымыктыш|1100px]]</div>
 </div>
-{{/Таб}}
 
 {| cellspacing="6"
 | width="75%" style="border-top:4px solid #C0C0C0; border-bottom:7px solid #C0C0C0; background-color:#fff; padding:0.5em;" valign="top"|
-<div style="font-variant:small-caps;font-family:Eurostile, 'Gill Sans', sans-serif; font-size:260%">'''Портал:Искусство'''</div>
-<div style="font-variant:small-caps;font-size:100%;margin-bottom:0.3em;">Искусство — шаг из природы в Бесконечность. (Джебран Халиль Джебран)</div>
+<div style="font-variant:small-caps;font-family:Eurostile, 'Gill Sans', sans-serif; font-size:260%">'''Портал:Сымыктыш'''</div>
+<div style="font-variant:small-caps;font-size:100%;margin-bottom:0.3em;">Сымыктыш — пӱртӱс гыч Нимучашдымылыкыш ошкыл. (Джебран Халиль Джебран)</div>
 ----
 </br>
 </div>
-'''Иску́сство''' (от ''искусы творити'') — [[процесс]] или итог выражения [[внутренний мир|внутреннего мира]] в (художественном) [[Образ (искусство)|образе]], [[творчество|творческое]] сочетание [[элемент]]ов таким способом, который отражает [[чувства]] или [[эмоции]].
-
-Долгое время искусством считался вид [[Культура|культурной]] деятельности, удовлетворяющий любовь человека к [[Прекрасное|прекрасному]].
-Вместе с эволюцией социальных эстетических норм и оценок искусством получила право называться любая деятельность, направленная на создание выразительных форм в соответствии с эстетическими идеалами.
-
-В масштабах всего общества искусство — особый способ познания и отражения действительности, одна из форм общественного сознания и часть духовной культуры как человека, так и всего человечества, многообразный результат творческой деятельности всех поколений.
-
+'''Сымыктыш''' — айдемын кӧргысӧ чон шижмашыжым образыште ончыктымаш.
 <!-- ######################### Fin del titular #########################-->
 | rowspan="6" width="25%" style="border: 2px solid #808080; border-bottom: 4px solid #808080; background-color:#F9F9F9; padding:0em;" valign="top" |
 {| cellspacing="0px" cellpadding="0"
@@ -28,7 +21,7 @@ __NOTOC__ __NOEDITSECTION__
 <div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Дочерние порталы'''</div>
 ----
 {{/Дочерние порталы}}
-<div align="right"><small>{{Editme|Портал:Искусство/Дочерние порталы|text=Править}}</small></div>
+<div align="right"><small>{{Editme|Портал:Сымыктыш/Дочерние порталы|text=Тӧрлаташ}}</small></div>
 |-
 | style="border: 2px solid #C0C0C0;border-top:none; background-color:#F9F9F9;border-left:none;border-right:none; padding:0.5em;" valign="top" |
 <div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Категории'''</div>
@@ -39,7 +32,7 @@ __NOTOC__ __NOEDITSECTION__
 <div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Новые статьи'''</div>
 ----
 {{/Новые статьи}}
-<div align="right"><small>{{Editme|Портал:Искусство/Новые статьи|text=Править}}</small></div>
+<div align="right"><small>{{Editme|Портал:Сымыктыш/Новые статьи|text=Тӧрлаташ}}</small></div>
 |-
 | style="border: 2px solid #C0C0C0; border-top:none; background-color:#F9F9F9; border-left:none; border-right:none; border-bottom:none; padding:0.5em;" valign="top" |
 <div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Проекты'''</div>
@@ -53,43 +46,44 @@ __NOTOC__ __NOEDITSECTION__
 {| width="100%"
 |-
 | style="vertical-align:top; width:70%; border: 2px solid #C0C0C0; border-top:none; background-color:#F9F9F9; border-left:none; border-right:none; border-bottom:none; padding:0.5em;" valign="top"|
-<div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Избранная статья'''</div>
+<div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Ойырымо статья'''</div>
 ----
 <div style="padding:0.0em 0.0em 0.0em 0.0em; background-color:transparent;">
-{{/Избранная статья}}
-<div align="right"><small>[[Портал:Искусство/Избранная статья/Архив|Архив]]&nbsp;&nbsp;{{Editme|Портал:Искусство/Избранная статья|text=Править}}</small></div>
+{{/Ойырымо статья}}
+<div align="right"><small>[[Портал:Сымыктыш/Ойырымо статья/Архив|Архив]]&nbsp;&nbsp;{{Editme|Портал:Сымыктыш/Ойырымо статья|text=Тӧрлаташ}}</small></div>
 </div>
 |-
 | style="vertical-align:top; width:70%;" |
-<div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Избранное изображение'''</div>
+<div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Ойырымо сӱрет'''</div>
 ----
 <div style="padding:0.0em 0.0em 0.0em 0.0em; background-color:transparent;">
-{{/Избранное изображение}}
-<div align="right"><small>[[Портал:Искусство/Избранное изображение/Текущая подборка|Текущая подборка]]&nbsp;&nbsp;[[Портал:Искусство/Избранное изображение/Архив|Архив]]&nbsp;&nbsp;{{Editme|Портал:Искусство/Избранное изображение|text=Править}}</small></div>
+{{/Ойырымо сӱрет}}
+<div align="right"><small>[[Портал:Сымыктыш/Ойырымо сӱрет/Кызытсе ойырымаш|Кызытсе ойырымаш]]&nbsp;&nbsp;[[Портал:Сымыктыш/Ойырымо сӱрет/Архив|Архив]]&nbsp;&nbsp;{{Editme|Портал:Сымыктыш/Ойырымо сӱрет|text=Тӧрлаташ}}</small></div>
 </div>
 |-
 | style="vertical-align:top; width:70%; border: 2px solid #C0C0C0; border-top:none; background-color:#F9F9F9; border-left:none; border-right:none; border-bottom:none; padding:0.5em;" valign="top" |
-<div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Избранная личность'''</div>
+<div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Ойырымо айдеме'''</div>
 ----
 <div style="padding:0.0em 0.0em 0.0em 0.0em; background-color:transparent;">
-{{/Избранная личность}}
-<div align="right"><small>[[Портал:Искусство/Избранная личность/Архив|Архив]]&nbsp;&nbsp;{{Editme|Портал:Искусство/Избранная личность|text=Править}}</small></div>
+{{/Ойырымо айдеме}}
+<div align="right"><small>[[Портал:Сымыктыш/Ойырымо айдеме/Архив|Архив]]&nbsp;&nbsp;{{Editme|Портал:Сымыктыш/Ойырымо айдеме|text=Тӧрлаташ}}</small></div>
 </div>
 |-
 | style="vertical-align:top; width:70%;" |
-<div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Как я могу помочь'''</div>
+<div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Кузе мый полшен кертам'''</div>
 ----
 <div style="padding:0.0em 0.0em 0.0em 0.0em; background-color:transparent;">
-{{/Как я могу помочь}}
-<div align="right"><small>{{Editme|Портал:Искусство/Как я могу помочь|text=Править}}</small></div>
+{{/Кузе мый полшен кертам}}
+<div align="right"><small>{{Editme|Портал:Сымыктыш/Кузе мый полшен кертам|text=Тӧрлаташ}}</small></div>
 </div>
 |}
 |}
 {{/Таб}}
 
-[[Категория:Портал:Искусство| ]]
+[[Категория:Портал:Сымыктыш| ]]
 
 {{Link FL|he}}
+
 
 [[ru:Портал:Искусство]]
 [[bg:Портал:Изкуство]]
