*Empty MediaWiki Message*

--- a/Портал:Сымыктыш.mw
+++ b/Портал:Сымыктыш.mw
@@ -20,24 +20,24 @@ __NOTOC__ __NOEDITSECTION__
 
 <div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Дочерние порталы'''</div>
 ----
-{{/Дочерние порталы}}
-<div align="right"><small>{{Editme|Портал:Сымыктыш/Дочерние порталы|text=Тӧрлаташ}}</small></div>
+{{/Йоча портал-влак}}
+<div align="right"><small>{{Editme|Портал:Сымыктыш/Йоча портал-влак|text=Тӧрлаташ}}</small></div>
 |-
 | style="border: 2px solid #C0C0C0;border-top:none; background-color:#F9F9F9;border-left:none;border-right:none; padding:0.5em;" valign="top" |
 <div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Категории'''</div>
 ----
-{{/Категории}}
+{{/Категорий-влак}}
 |-
 | style="border: 2px solid #C0C0C0;border-top:none; background-color:#F9F9F9;border-left:none;border-right:none; padding:0.5em;" valign="top" |
 <div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Новые статьи'''</div>
 ----
-{{/Новые статьи}}
-<div align="right"><small>{{Editme|Портал:Сымыктыш/Новые статьи|text=Тӧрлаташ}}</small></div>
+{{/У статья-влак}}
+<div align="right"><small>{{Editme|Портал:Сымыктыш/У статья-влак|text=Тӧрлаташ}}</small></div>
 |-
 | style="border: 2px solid #C0C0C0; border-top:none; background-color:#F9F9F9; border-left:none; border-right:none; border-bottom:none; padding:0.5em;" valign="top" |
-<div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Проекты'''</div>
+<div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Проект-влак'''</div>
 ----
-{{/Проекты}}
+{{/Проект-влак}}
 
 |}
 <!-- ######################### Fin columna derecha #########################-->
