--- a/Портал:Сымыктыш.mw
+++ b/Портал:Сымыктыш.mw
@@ -1,5 +1,5 @@
 __NOTOC__ __NOEDITSECTION__
-{{/Навигация}}
+{{Портал:Сымыктыш/Навигация}}
 <div style="position:relative; height:90px; overflow:hidden; border:1px solid #C0C0C0; padding:0; background:#55606C;height:90px">
 <div style="width:100%; overflow:hidden; padding-bottom:0.5em;">[[Файл:Art through history small.jpg|Портал:Сымыктыш|1100px]]</div>
 </div>
@@ -16,28 +16,28 @@ __NOTOC__ __NOEDITSECTION__
 | rowspan="6" width="25%" style="border: 2px solid #808080; border-bottom: 4px solid #808080; background-color:#F9F9F9; padding:0em;" valign="top" |
 {| cellspacing="0px" cellpadding="0"
 | style="border: 2px solid #C0C0C0; background-color:#F9F9F9; padding:0.5em;border-left:none;border-right:none;" valign="middle" |
-<center>{{/Заставка}}</center>
+<center>{{Портал:Сымыктыш/Заставка}}</center>
 
-<div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Дочерние порталы'''</div>
+<div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Ӱлылпортал-влак'''</div>
 ----
-{{/Йоча портал-влак}}
+{{Портал:Сымыктыш/Ӱлылпортал-влак}}
 <div align="right"><small>{{Editme|Портал:Сымыктыш/Йоча портал-влак|text=Тӧрлаташ}}</small></div>
 |-
 | style="border: 2px solid #C0C0C0;border-top:none; background-color:#F9F9F9;border-left:none;border-right:none; padding:0.5em;" valign="top" |
-<div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Категории'''</div>
+<div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Категорий-влак'''</div>
 ----
-{{/Категорий-влак}}
+{{Портал:Сымыктыш/Категорий-влак}}
 |-
 | style="border: 2px solid #C0C0C0;border-top:none; background-color:#F9F9F9;border-left:none;border-right:none; padding:0.5em;" valign="top" |
-<div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Новые статьи'''</div>
+<div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''У статья-влак'''</div>
 ----
-{{/У статья-влак}}
+{{Портал:Сымыктыш/У статья-влак}}
 <div align="right"><small>{{Editme|Портал:Сымыктыш/У статья-влак|text=Тӧрлаташ}}</small></div>
 |-
 | style="border: 2px solid #C0C0C0; border-top:none; background-color:#F9F9F9; border-left:none; border-right:none; border-bottom:none; padding:0.5em;" valign="top" |
 <div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Проект-влак'''</div>
 ----
-{{/Проект-влак}}
+{{Портал:Сымыктыш/Проект-влак}}
 
 |}
 <!-- ######################### Fin columna derecha #########################-->
@@ -49,7 +49,7 @@ __NOTOC__ __NOEDITSECTION__
 <div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Ойырымо статья'''</div>
 ----
 <div style="padding:0.0em 0.0em 0.0em 0.0em; background-color:transparent;">
-{{/Ойырымо статья}}
+{{Портал:Сымыктыш/Ойырымо статья}}
 <div align="right"><small>[[Портал:Сымыктыш/Ойырымо статья/Архив|Архив]]&nbsp;&nbsp;{{Editme|Портал:Сымыктыш/Ойырымо статья|text=Тӧрлаташ}}</small></div>
 </div>
 |-
@@ -57,7 +57,7 @@ __NOTOC__ __NOEDITSECTION__
 <div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Ойырымо сӱрет'''</div>
 ----
 <div style="padding:0.0em 0.0em 0.0em 0.0em; background-color:transparent;">
-{{/Ойырымо сӱрет}}
+{{Портал:Сымыктыш/Ойырымо сӱрет}}
 <div align="right"><small>[[Портал:Сымыктыш/Ойырымо сӱрет/Кызытсе ойырымаш|Кызытсе ойырымаш]]&nbsp;&nbsp;[[Портал:Сымыктыш/Ойырымо сӱрет/Архив|Архив]]&nbsp;&nbsp;{{Editme|Портал:Сымыктыш/Ойырымо сӱрет|text=Тӧрлаташ}}</small></div>
 </div>
 |-
@@ -65,7 +65,7 @@ __NOTOC__ __NOEDITSECTION__
 <div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Ойырымо айдеме'''</div>
 ----
 <div style="padding:0.0em 0.0em 0.0em 0.0em; background-color:transparent;">
-{{/Ойырымо айдеме}}
+{{Портал:Сымыктыш/Ойырымо айдеме}}
 <div align="right"><small>[[Портал:Сымыктыш/Ойырымо айдеме/Архив|Архив]]&nbsp;&nbsp;{{Editme|Портал:Сымыктыш/Ойырымо айдеме|text=Тӧрлаташ}}</small></div>
 </div>
 |-
@@ -73,14 +73,14 @@ __NOTOC__ __NOEDITSECTION__
 <div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Кузе мый полшен кертам'''</div>
 ----
 <div style="padding:0.0em 0.0em 0.0em 0.0em; background-color:transparent;">
-{{/Кузе мый полшен кертам}}
+{{Портал:Сымыктыш/Кузе мый полшен кертам}}
 <div align="right"><small>{{Editme|Портал:Сымыктыш/Кузе мый полшен кертам|text=Тӧрлаташ}}</small></div>
 </div>
 |}
 |}
-{{/Таб}}
+{{Портал:Сымыктыш/Таб}}
 
-[[Категория:Портал:Сымыктыш| ]]
+[[Категорий:Портал:Сымыктыш| ]]
 
 {{Link FL|he}}
 
