--- a/Портал:Сымыктыш.mw
+++ b/Портал:Сымыктыш.mw
@@ -1,5 +1,5 @@
 __NOTOC__ __NOEDITSECTION__
-{{Портал:Сымыктыш/Навигация}}
+{{Портал:Сымыктыш/Навигаций}}
 <div style="position:relative; height:90px; overflow:hidden; border:1px solid #C0C0C0; padding:0; background:#55606C;height:90px">
 <div style="width:100%; overflow:hidden; padding-bottom:0.5em;">[[Файл:Art through history small.jpg|Портал:Сымыктыш|1100px]]</div>
 </div>
